fixed styling overflow and styling issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,10 +82,6 @@ a {
     opacity: 0.5;
 }
 
-
-
-
-
 button {
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
@@ -194,8 +190,6 @@ nav h3 {
 
 .chat-messages {
     padding: 30px;
-    min-height: 500px;
-    max-height: 500px;
     overflow-y: scroll;
 }
 
